--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,5 +12,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GIST_ID: 5cc43d11e31982f26cc5f6c2bd9efc73
           TIMEZONE: Asia/Seoul
