--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update gist
-        uses: maxam2017/productive-box@master
+        uses: BByungs/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 5cc43d11e31982f26cc5f6c2bd9efc73
